@@ -8,12 +8,14 @@ import com.peng.service.UserService;
  * @Slogan: Day day no bug.
  * @Date: 2025/3/21 23:32
  * @Desc: $description
+ * jfr
+ * --add-opens java.base/java.lang=ALL-UNNAMED -XX:StartFlightRecording
  */
 public class Main {
     public static void main(String[] args) {
         PengApplicationContext context=new PengApplicationContext(MyConfig.class);
         UserService userService = (UserService) context.getBean("userService");
         userService.test();
-        System.out.println(userService.getName());
+//        System.out.println(userService.getName());
     }
 }
